Added some beautiful CSS

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="assets/style.css" />
+    <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro|Roboto:400,500' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/style.css" />
   </head>
 
   <body>
